<resources>
    <string name="app_name">BOB</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="events">Events</string>
    <string name="rides">Rides</string>
    <string name="profile">Profile</string>
    <string name="approved">Approved</string>
    <string name="requests">Requests</string>
    <string name="zero">0</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="facebook_app_id">417541028457112</string>
    <string name="guests">Guests</string>
    <string name="event">Event</string>
    <string name="bullet"> • </string>
    <string name="in"> in </string>
    <string name="map">Map</string>
    <string name="driver">Driver</string>

    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="are_you_bob">Are you BOB?</string>

    <string-array name="bob_options">
        <item>Yes, I would like to share my ride</item>
        <item>No, I would like to join a ride</item>
        <item>Nevermind</item>
    </string-array>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="when">When</string>
    <string name="where">Where</string>
    <string name="what">What</string>
    <string name="license_plate">License Plate</string>
    <string name="car_description">Car Description</string>
    <string name="about_me">About me</string>
    <string name="you_are_a_bob">You are a BOB!</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="approval_status">Approval Status</string>
    <string name="cars">Cars</string>
    <string name="navigation_header">Navigation Header</string>
    <string name="logo">Logo</string>
    <string name="ride_image">Ride Image</string>
    <string name="event_image">Event Image</string>
    <string name="BOB">BOB</string>
    <string name="car_icon">Car Icon</string>
    <string name="account">Account</string>
    <string name="calendar">Calendar</string>
    <string name="map_marker">Map Marker</string>
    <string name="time">Time</string>
    <string name="starts_at">Starts at</string>
    <string name="ends_at">Ends At</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="ride">Ride</string>
    <string name="share">Share</string>
    <string name="pref_sync">Sync</string>
    <string name="pref_sync_summ">Should the application sync in the background?</string>
    <string name="pref_data_title">Data</string>
    <string name="pref_interface_title">Interface</string>
    <string name="pref_dark">Dark theme</string>
    <string name="about">About BOB</string>
    <string name="privacy">Privacy Policy</string>
    <string name="pref_misc_title">BOB</string>
    <string name="pref_notifications">Notifications</string>
    <string name="pref_notifications_summ">Receive notifications?</string>
    <string name="no_events">No events</string>
    <string name="failed_loading">Failed loading</string>
    <string name="loading_events">Loading events…</string>
    <string name="no_rides">No rides</string>
    <string name="none_yet">None… Yet.</string>
    <string name="vehicle">Vehicle</string>
    <string name="sync_account_type">com.howest.nmct.bob.account</string>
    <string name="content_authority">com.howest.nmct.bob</string>
    <string name="try_again">Try again</string>
    <string name="find_share_rides"><![CDATA[Find & Share Rides]]></string>
    <string name="description">Description</string>
    <string name="user">User</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="view_profile">View Profile</string>
    <string name="write_something_about_yourself">Something about myself</string>
    <string name="toolbar_image">Toolbar Image</string>
    <string name="share_my_ride">Share my ride</string>
    <string name="find_a_ride">Find a ride</string>
    <string name="hide_event">Hide event</string>
    <string name="hide">Hide</string>
    <string name="delete">Delete</string>
    <string name="mobile">Mobile</string>
    <string name="carmodel">Car Model</string>
    <string name="carno">Car No.</string>
    <string name="carmake">Car Make</string>
    <string name="clear_data">Clear Data</string>
    <string name="clear_summary">Clear all cached data</string>
</resources>
