<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_data_title"
        android:key="pref_key_data">
        <CheckBoxPreference
            android:key="pref_sync"
            android:title="@string/pref_sync"
            android:summary="@string/pref_sync_summ"
            android:defaultValue="true" />
        <CheckBoxPreference
            android:key="pref_notifications"
            android:title="@string/pref_notifications"
            android:summary="@string/pref_notifications_summ"
            android:defaultValue="true" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_interface_title"
        android:key="pref_key_interface">
        <CheckBoxPreference
            android:key="pref_dark"
            android:title="@string/pref_dark"
            android:defaultValue="false" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_misc_title"
        android:key="pref_key_misc">

        <Preference android:title="@string/about" >
            <intent android:action="android.intent.action.VIEW"
                android:data="http://bob.il.ly" />
        </Preference>

        <Preference android:title="@string/privacy" >
            <intent android:action="android.intent.action.VIEW"
                android:data="http://bob.il.ly/privacy" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>