<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/nav_top" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_feed"
            android:icon="@drawable/ic_home"
            android:title="@string/feed" />
        <item android:id="@+id/nav_events"
            android:icon="@drawable/ic_calendar"
            android:title="@string/events" />
        <item android:id="@+id/nav_rides"
            android:icon="@drawable/ic_car"
            android:title="@string/rides" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_account"
            android:title="@string/profile" />
    </group>

    <group android:id="@+id/nav_bottom" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/action_settings" />
    </group>

</menu>