<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.MainActivity">
    <item android:id="@+id/event"
        android:icon="@drawable/ic_calendar_white"
        android:title="@string/event"
        android:orderInCategory="100"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/share"
        android:title="@string/share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always" />
    <item android:id="@+id/delete"
        android:icon="@drawable/ic_trash_white"
        android:title="@string/delete"
        android:orderInCategory="200"
        app:showAsAction="ifRoom" />
</menu>
