<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/cardsWrapper"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout style="@style/Card.Wrapper.Details">

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/when" />

            <TextView
                android:id="@+id/date"
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View style="@style/Separator.Horizontal" />

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/where" />

            <TextView
                android:id="@+id/address"
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <View style="@style/Separator.Horizontal" />

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/what" />

            <TextView
                android:id="@+id/description"
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description that will be editable by the driver. This will explain general information about the ride." />

        </LinearLayout>

        <LinearLayout style="@style/Card.Wrapper.Details">

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_plate" />

            <TextView
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-ABC-123" />

            <View style="@style/Separator.Horizontal" />

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_description" />

            <TextView
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Red Volkswagen A1" />

        </LinearLayout>

        <LinearLayout style="@style/Card.Wrapper.Details">

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/license_plate" />

            <TextView
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1-ABC-123" />

            <View style="@style/Separator.Horizontal" />

            <TextView
                style="@style/Card.Text.Meta.Label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_description" />

            <TextView
                style="@style/Card.Text.Meta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Red Volkswagen A1" />

        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>